<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1"
         android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@mipmap/ic_home_black_24dp" />
        <item android:id="@+id/nav_new_prod"
            android:title="@string/new_product"
            android:icon="@drawable/ic_new_prod"/>

    </group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item android:id="@+id/nav_myaccount"
            android:title="@string/my_account"
            android:icon="@drawable/ic_user_account" />

        <item android:id="@+id/nav_wishlist"
            android:title="@string/wishlist"
            android:icon="@drawable/ic_wishlist"/>

        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

    </group>


</menu>