<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_skip"
            android:text="@string/skip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_normal_8dp"
            android:layout_marginTop="@dimen/padding_normal_8dp"
            android:textColor="@color/txt_color"
            android:visibility="invisible"
            />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="260dp"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/app_logo"
            android:layout_below="@id/btn_skip"
            android:layout_marginTop="@dimen/padding_too_large_30"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:layout_below="@id/logo"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:singleLine="true"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/phone_no"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/phone_number"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:singleLine="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green_login"
            android:textColor="@color/white"
            android:layout_below="@id/password"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/forgot_password"
            android:text="@string/forgot_password"
            android:layout_below="@id/login"
            android:layout_alignParentRight="true"
            android:textColor="@color/green_light"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_medium_10dp"
            android:layout_marginBottom="@dimen/padding_extra_large_20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/or"
            android:text="@string/or"
            android:layout_below="@id/login"
            android:layout_marginTop="@dimen/padding_too_large_30"
            android:layout_marginBottom="@dimen/padding_extra_large_20"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_signup_here"
            android:layout_below="@id/or"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_too_large_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textColor="@color/txt_color"
                android:layout_marginRight="@dimen/padding_small_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_here"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>