<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:textSize="@dimen/txt_size_18"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:text="@string/otp_has_send"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_50"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otp_value"
            android:layout_below="@id/header"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:hint="@string/otp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green_login"
            android:textColor="@color/white"
            android:layout_below="@id/otp_value"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resend_otp"
            android:text="@string/resend_otp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txt_size_extra_large_15"
            android:layout_below="@id/submit"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_50"/>

    </RelativeLayout>


</ScrollView>