<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/padding_small_5">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small_5"
        android:text="@string/write_review"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_extra_large_15"
        android:layout_marginTop="@dimen/padding_medium_10dp"
        android:layout_marginBottom="@dimen/padding_small_5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_userreview">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small_5"
            android:id="@+id/yourrating"
            android:text="@string/your_rating"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_extra_large_15" />

        <android.support.v7.widget.AppCompatRatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            android:numStars="5"
            android:stepSize=".5"
            android:rating="3"
            android:layout_toRightOf="@id/yourrating"
            android:isIndicator="true"
            style="@style/ratingBarMedium"
            android:layout_marginLeft="@dimen/padding_medium_10dp"
            android:layout_marginTop="@dimen/padding_small_5"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_summery"
            android:layout_below="@+id/yourrating"
            android:layout_marginTop="@dimen/padding_medium_10dp"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:hint="@string/review_summery"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_details"
            android:layout_below="@id/review_summery"
            android:layout_marginTop="@dimen/padding_medium_10dp"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingTop="@dimen/padding_small_5"
            android:hint="@string/review"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/review_submit"
            android:layout_below="@id/review_details"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_medium_10dp"
            android:text="@string/submit"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green_login"
            android:textColor="@color/white" />



    </RelativeLayout>



</LinearLayout>